--- a/AvansDevOps/AvansDevOps.csproj
+++ b/AvansDevOps/AvansDevOps.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Adapter\DevOpsAdapter\" />
+    <Folder Include="Domain\Interfaces\" />
+    <Folder Include="Domain\Factory\" />
+    <Folder Include="Domain\Models\" />
+    <Folder Include="Domain\Export\" />
+    <Folder Include="Domain\Observer\" />
+    <Folder Include="Domain\States\SprintStates\" />
+  </ItemGroup>
+
 </Project>
