--- a/DevOpsTests/DevOpsTests.csproj
+++ b/DevOpsTests/DevOpsTests.csproj
@@ -23,7 +23,6 @@
   <ItemGroup>
     <Folder Include="Domain\Interfaces\" />
     <Folder Include="Domain\Models\" />
-    <Folder Include="Domain\Factory\" />
     <Folder Include="Domain\Adapter\" />
     <Folder Include="Domain\Export\" />
     <Folder Include="Domain\Rules\" />
@@ -31,6 +30,10 @@
     <Folder Include="Domain\States\BacklogitemStates\" />
     <Folder Include="Domain\States\SprintStates\" />
     <Folder Include="Domain\Users\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AvansDevOps\AvansDevOps.csproj" />
   </ItemGroup>
 
 </Project>
